# CLT-Python

./: README.md  main.py  pyproject.toml  urls.txt
Lectures/L01_Basic_of_Python/: L01_python_structure.ipynb  L02_lexical_literal.ipynb  L03_expression_statement.ipynb  L04_object_type.ipynb  L04_object_type_system.ipynb  L05_control_flow.ipynb  L05_control_flow_enhanced.ipynb  L06_iteration_protocol_notebook.ipynb  L07_function_scope_notebook.ipynb  L08_module_package_notebook.ipynb  L08_namespace_scope_legb.ipynb  L08_review_class_1_6.ipynb  L09_module_package_notebook.ipynb  L09_namespace_scope_legb.ipynb  L10_collection_types_lecture.ipynb  L11_OOP_Class_lecture.ipynb  L12_Exception_IO_lecture.ipynb  L13_Pythonic_Patterns_lecture.ipynb  README.md  a.ipynb  notebook.ipynb
Lectures/L02_/: week01-02.ipynb  week01.ipynb  week02.ipynb  week03.ipynb  week04.ipynb  week05.ipynb
Lectures/L02_midterm/: week01.ipynb  week02.ipynb  week03.ipynb  week04.ipynb  week05.ipynb
Lectures/L03_Conda/: README.md
Lectures/L04_Pandas/: README.md
Lectures/L05_PIL/: L00_introduction.ipynb  L01_basic_of_pillow.ipynb  L02_copy_ImageDraw.ipynb  L03_ImageEnhance.ipynb  README.md
Lectures/L06_Git/: L01_what_is_git.ipynb  L02_git_config.ipynb  L03_init_repository.ipynb  L04_status.ipynb  L05_add_staging.ipynb  L06_commit_to_repository.ipynb  L07_commit_amend.ipynb  L08_change_log.ipynb  L09_diff.ipynb  L10_rm.ipynb  L11_restore.ipynb  L12_revert.ipynb  L13_reset.ipynb  notebook.ipynb
Lectures/L07_Colab/: AI_Assistant_202535819_이제석.ipynb
md/: plan1.md  plan2.md
(+7 files in other folders)
